# split-folders

./: .gitignore  README.md  pyproject.toml
split_folder/: main.py  requirements.txt  split.py
splitfolders/: split.py
