[tool.poetry]
name = "split-folder"
version = "0.1.2"
description = "Spilt folder into train/val/test subset"
authors = ["Nivratti <boyanenivratti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.2"
nb-utils = "^0.1.0"
tqdm  = "4.42.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
